--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<% @courses.each do  |course| %>
+  <p> <%= course.name %> - <%= link_to 'details', course_path(course) %> </p>
+<% end %>
