--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,6 +1,16 @@
-<% current_user.courses.each do  |course| %>
-<p><%= course.name %></p>
-<%= link_to 'post', new_occurrence_path(course.id) %>
+<h2>These are my courses</h2>
+
+<% @courses.each do  |course| %>
+  <p><%= course.name %> - <%= link_to 'post', new_course_occurence_path(course.id) %> | <%= link_to 'destroy', course_path(course), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %></p>
 <% end %>
 
-<p><%= link_to 'Create a Class', new_course_path %></p>
+<p><%= link_to 'ALL', courses_path %> | <%= link_to 'ADD', new_course_path %></p>
+
+<h2>These are my occurences</h2>
+
+<% @courses.each do  |course| %>
+  <% course.occurences.each do |occurence| %>
+  <p> <%= occurence.course.name %> - <%= occurence.date %> - <%= occurence.time %> - <%= link_to 'destroy', course_occurence_path(course, occurence), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %></p>
+  <% end %>
+<% end %>
+
