--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div id="search-bar">
+  <div class="background-image" style="background-image: url(<%= asset_path'landing_background.jpg'%>)">
+    <div class="bold-logo-div">
+      <img class="bold-logo" src="https://res.cloudinary.com/dolfny7hf/image/upload/v1603809296/Bold_est1tz.png" alt="bold-logo">
+    </div>
+
+      <div class="search-bar-div">
+        <form class="search-form">
+          <input class="search-bar" type="search" placeholder="Type of Yoga">
+          <a class="btn btn-ghost" href="#">Search</a>
+        </form>
+      </div>
+  </div>
+</div>
+
