--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
           <a class="btn btn-ghost" href="#">Search</a>
           <h1>Pages#home</h1>
           <% @courses.each do  |course| %>
-          <p> <%= course.name %> - <%= link_to 'details', course_path(course) %> </p>
+          <p> <%= course.name %> - <%= course.user.name %> - <%= link_to 'details', course_path(course) %> </p>
           <% end %>
         </form>
       </div>
