--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,3 +1,7 @@
-<div class="container">
-<%= render "form", course: @course %>
-</div>
+<% if current_user.teacher %>
+  <div class="container">
+  <%= render "form", course: @course %>
+  </div>
+<% else %>
+  <h2>you cannot view this page</h2>
+<% end %>
