--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,8 @@
-<h1> These are the list of courses from this teacher(user)</h1>
-<% @courses.each do  |course| %>
-  <p> <%= course.name %> - <%= link_to 'destroy', course_path(course), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %></p>
+<% if current_user.teacher %>
+  <% @courses.each do  |course| %>
+    <p> <%= course.name %> - <%= link_to 'destroy', course_path(course), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %></p>
+  <% end %>
+<% else %>
+  <h2>you cannot view this page</h2>
 <% end %>
+
