--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,42 +1,38 @@
+#dashboard {
+  background-color: #ffffff;
+  margin-left: 0px;
 
-.welcome {
-  font-family: 'Pacifico', cursive;
-  letter-spacing: 2px;
-  font-size: 2em;
-}
-
-.container {
-  margin: 20px;
-  display: flex;
-  padding: 10px;
-}
-
-.info-card {
-  padding: 10px;
-}
-
-.courses-card {
-  padding: 10px;
-}
-
-.calendar-card {
-  padding: 10px;
-=======
-#teacher-dashboard {
-  .green-block {
-    width: cover;
-    height: 274px;
-    background-color: #217167;
-    opacity: 87%;
-  }
-}
-
-#student-dashboard {
-  .green-block {
-    width: cover;
-    height: 274px;
-    background-color: #217167;
-    opacity: 87%;
+  .welcome {
+    font-family: 'Pacifico', cursive;
+    letter-spacing: 2px;
+    font-size: 2em;
+    margin-left: 10px;
   }
 
+  .container {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 0px;
+    padding: 20px;
+    background-color: #ffffff;
+  }
+
+  .image {
+    text-align: center;
+  }
+  .info-card {
+    padding: 10px;
+  }
+
+  .courses-card {
+    padding: 10px;
+  }
+
+  .calendar-card {
+    padding: 10px;
+  }
+
+// background-color: #217167;
+
 }
+
