--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,68 +1,60 @@
-
-<div class="container">
-  <div class="info-card">
-    <p class='welcome'> Welcome <%= current_user.name.capitalize %>, </p>
-    <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603820702/Screenshot_2020-10-27_at_09.24.58_grsiu5.png", class: "avatar-bordered", alt: "avatar-bordered" %>
-    <p> </p>
-    <p>Basic info:</p>
-    <p>Email: <%= current_user.email%> <p>
-    <p>Address: <%= current_user.address %><p>
-    <p>Phone: <%= current_user.telephone%> <p>
-  </div>
-  <div class="courses-card">
-    <h2>These are my courses</h2>
-
-    <% @courses.each do  |course| %>
-      <p><%= course.name %> - <%= link_to 'POST', new_course_occurence_path(course.id) %> | <%= link_to 'EDIT', edit_course_path(course) %> | <%= link_to 'DELETE', course_path(course), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %></p>
-    <% end %>
-
-    <p><%= link_to 'ALL', courses_path %> | <%= link_to 'ADD', new_course_path %></p>
-
-    <h2>These are my occurences</h2>
-
-    <% @courses.each do  |course| %>
-      <% course.occurences.each do |occurence| %>
-      <p> <%= occurence.course.name %> - <%= occurence.date %> - <%= occurence.time %> - <%= link_to 'destroy', course_occurence_path(course, occurence), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %></p>
-      <% end %>
-    <% end %>
-  </div>
-  <div class="calendar">
-    <h2>Calendar goes in here</h2>
-  </div>
-</div>
-=======
 <% if current_user.teacher %>
-  <div id="teacher-dashboard">
-    <div class="mt-4">
-      <div class="green-block">
+  <div id="dashboard">
+      <div class="d-flex mt-1">
+      <p class='welcome'> Welcome</p>
+      <p><%= current_user.name.capitalize %></p>
       </div>
-      <h2>This is the teacher dashboard</h2>
+    <div class="container">
+      <div class="info-card">
+        <div class='image'>
+          <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603828560/Screenshot_2020-10-27_at_20.55.41_j80wgs.png", class: "avatar-bordered", alt: "avatar-bordered" %>
+        </div>
+        <div class='info'>
+          <p> </p>
+          <p>Basic info:</p>
+          <p>Email: <%= current_user.email%> </p>
+          <p>Address: <%= current_user.address %></p>
+          <p>Phone: <%= current_user.telephone%> </p>
+          <p><strong>Instructor</strong></p>
+        </div>
+      </div>
+      <div class="courses-card">
+        <h3>Your Listed Courses:</h3>
+        <% @courses.each do  |course| %>
+          <p><%= course.name %> - <%= link_to 'CREATE A NEW EVENT', new_course_occurence_path(course.id) %> |
+            <%= link_to edit_course_path(course) do %><i class="far fa-edit"></i><% end %> |
+            <%= link_to course_path(course), method: :delete, data: { confirm: "Are you sure you would like to delete?" } do %> <i class="far fa-trash-alt"></i> <% end %>
+           <% end %>
+        <p><%= link_to 'ALL', courses_path %> | <%= link_to 'ADD', new_course_path %></p>
 
-      <h3>These are my courses</h3>
-      <% @courses.each do  |course| %>
-        <p><%= course.name %> - <%= link_to 'post', new_course_occurence_path(course.id) %> | <%= link_to 'destroy', course_path(course), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %></p>
-      <% end %>
+        <h3>Your Upcoming Events:</h3>
 
-      <p><%= link_to 'ALL', courses_path %> | <%= link_to 'ADD', new_course_path %></p>
-
-      <h3>These are my occurences</h3>
-
-      <% @courses.each do  |course| %>
-        <% course.occurences.each do |occurence| %>
-        <p> <%= occurence.course.name %> - <%= occurence.date %> - <%= occurence.time %> - <%= link_to 'destroy', course_occurence_path(course, occurence), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %></p>
+        <% @courses.each do  |course| %>
+          <% course.occurences.each do |occurence| %>
+          <p> <%= occurence.course.name %> - <%= occurence.date %> - <%= occurence.time %> - <%= link_to 'destroy', course_occurence_path(course, occurence), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %></p>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
+      <div class="calendar">
+        <h2>Calendar goes in here</h2>
+      </div>
     </div>
   </div>
 <% else %>
-  <div id="student-dashboard">
-    <div class="mt-4">
-      <div class="green-block">
+
+  <div id="dashboard">
+    <div class="container">
+      <div class="info-card">
+        <p class='welcome'> Welcome <%= current_user.name.capitalize %>, </p>
+        <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603828560/Screenshot_2020-10-27_at_20.55.41_j80wgs.png", class: "avatar-bordered", alt: "avatar-bordered" %>
+        <p> </p>
+        <p>Basic info:</p>
+        <p>Email: <%= current_user.email%> </p>
+        <p>Address: <%= current_user.address %></p>
+        <p>Phone: <%= current_user.telephone%> </p>
       </div>
-      <h2>This is the student dashboard</h2>
+      <div class="courses-card">
+      <h2>Your Upcoming Classes:</h2>
     </div>
   </div>
 <% end %>
-
-
-
