--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -20,6 +20,11 @@
   .image {
     text-align: center;
   }
+
+  .header {
+    margin-bottom: 50px;
+
+  }
   .info-card {
     padding: 10px;
   }
@@ -30,6 +35,7 @@
 
   .calendar-card {
     padding: 10px;
+    text-align: center;
   }
 
 // background-color: #217167;
