added picture to user seeds and changed navbar user picture

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
 <% if !current_user.teacher %>
   <%= simple_form_for [ @course, @booking ] do |f| %>
-    <%= f.association :occurence, prompt: "Select time", collection: @occurences.map{ |l| "#{l.date} --- #{l.time}" } %>
+    <%= f.association :occurence, prompt: "Select time", collection: @occurences.map{ |l| "#{l.date}" } %>
     <%= f.submit %>
   <% end %>
 <% end %>
