--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,11 +1,12 @@
 #dashboard {
   background-color: #ffffff;
   margin-left: 0px;
+  margin-top: 20px;
 
   .welcome {
     font-family: 'Pacifico', cursive;
     letter-spacing: 2px;
-    font-size: 2em;
+    font-size: 1em;
     margin-left: 10px;
   }
 
@@ -26,7 +27,10 @@
 
   }
   .info-card {
-    padding: 10px;
+  }
+
+  .info {
+    margin-top: 20px;
   }
 
   .courses-card {
