--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,9 +1,11 @@
+<div class="container-lg">
 <h2>Resend confirmation instructions</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
   <%= f.full_error :confirmation_token %>
-
+<div class="row-resend">
+    <div class="col-md-4">
   <div class="form-inputs">
     <%= f.input :email,
                 required: true,
@@ -11,10 +13,13 @@
                 value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email),
                 input_html: { autocomplete: "email" } %>
   </div>
+</div>
+</div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
+    <%= f.button :submit, "Resend confirmation instructions", class: "btn btn-outline-success"  %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
