--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,4 +5,4 @@
   <% end %>
 <% end %>
 
-   <!-- collection: details = @occurences.map{ |l| "#{l.date} --- #{l.time}" } %> -->
+   <!-- collection: @occurences.map{ |l| "#{l.date} --- #{l.time}" } %> -->
