--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,7 @@
 <% if !current_user.teacher %>
   <%= simple_form_for [ @course, @booking ] do |f| %>
-    <%= f.association :occurence, prompt: "Select time", label_method: :slot, value_method: :id  %>
+    <%= f.association :occurence, collection: details = @occurences, prompt: "Select time", label_method: :slot, value_method: :id  %>
     <%= f.submit %>
   <% end %>
 <% end %>
 
-   <!-- collection: details = @occurences.map{ |l| "#{l.date} --- #{l.time}" } %> -->
