--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,3 +55,10 @@
 
 </div>
 
+<div id="map"
+     style="width: 450px; height: 500px; margin-left: 650px; margin-top: -255px;"
+     data-markers='<%= @markers.to_json %>'
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
+
+
