trying to get the dashboard and teachers page to look nice

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -26,6 +26,10 @@
 }
 
 .nav-link {
-  color: #ffffff;
+  color: #ffffff !important;
+   &:hover {
+    letter-spacing: 3px;
+    opacity: 0.7;
+  }
 }
 
