--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,25 @@
-<div id="teacher-showpage">
-  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://zone1-ibizaspotlightsl.netdna-ssl.com/sites/default/files/styles/embedded_auto_740_width/public/article-images/136150/embedded-1597160838_0.jpg?itok=9a_iUhX7);">
+<div class="card-trip">
+  <div class="banner" style="background-image: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.2)), url(https://source.unsplash.com/500x500/?yoga);">
+  <div class="space">
+  </div>
+  <div class="card-trip-infos">
+    <div>
+      <h2>Title here</h2>
+      <p>Short description here!</p>
+    </div>
+    <h2 class="card-trip-pricing">£99.99</h2>
+    <img src="https://res.cloudinary.com/dolfny7hf/image/upload/v1603828560/Screenshot_2020-10-27_at_20.55.41_j80wgs.png" class="card-trip-user avatar-bordered" alt="avatar-bordered">
+  </div>
+</div>
+
+
+
+
+
+<!-- <div id="teacher-showpage">
+  <div class="banner" style="background-image: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.2)), url(https://source.unsplash.com/500x500/?yoga);">
     <div class="container">
-     <div class="info">
+      <div class="info">
       <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603828560/Screenshot_2020-10-27_at_20.55.41_j80wgs.png", class: "avatar-bordered", alt: "avatar-bordered" %>
       <p><h3><%= @user.name %></h3></p>
      <p> <%= @user.name %> is a yoga teacher based in Bali, Indonesia, where the sun sets on her yoga classes.
@@ -39,3 +57,6 @@
     </div>
   </div>
 </div>
+
+
+ -->
