--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,20 +1,38 @@
 #course-card-div {
-  background: white;
+  background-color: white;
   width: 600px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 10px;
+  // display: grid;
+  // grid-template-columns: 1fr 1fr;
+  // color: #f2f2f2;
 
 .card-course {
   overflow: hidden;
   height: 120px;
-  background: white;
+  background-color: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  width: 400px;
+  width: auto;
   margin-top: 15px;
   margin-left: 10px;
+  // border: 1px solid black;
+  // transition-property: background-color;
+  // transition-duration: 0.6s;
+  // transition-timing-function: linear;
+  background: -webkit-linear-gradient(#ffffff,#018a79);
+  background: -moz-linear-gradient(#ffffff,#018a79);
+  background: -o-linear-gradient(#ffffff,#018a79);
+  background: linear-gradient(#ffffff,#018a79);
+  -webkit-transition: background 0.5s ease-out;
+  -moz-transition: background 0.5s ease-out;
+  -o-transition: background 0.5s ease-out;
+  transition: background 0.5s ease-out;
+    // background-size:1px 200px;
+    // border-radius: 10px;
+    // border: 1px solid #839DB0;
+    // cursor:pointer;
+    // width: 150px;
+    // height: 100px;
 }
 
 .card-course img {
@@ -24,8 +42,11 @@
 }
 
 .card-course h2 {
-  font-size: 25px;
+  font-family: work-sans;
+  color: black;
+  font-size: 20px;
   margin: 0;
+  padding: 10px;
 }
 
 .card-course p {
@@ -40,12 +61,24 @@
   padding: 16px;
 }
 
-// .course-card-row {
-//   display: flex;
-//   width: 600px;
-// }
+.course-card-row {
+  display: flex;
+  width: 600px;
+}
+.card-course:hover, .card-course img:hover {
+  opacity: 1;
+  background: #e2a9e5;
+  background: -moz-linear-gradient(-15deg, #ffffff 15%, #018a79 100%);
+  background: -webkit-linear-gradient(-15deg, #ffffff 15%,#018a79 100%);
+  background: linear-gradient(135deg, #ffffff 15%,#018a79 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#018a79',GradientType=1 );
+  background-position:100px;
 
 }
+
+
+}
+
 
 
 
@@ -63,3 +96,9 @@
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
+
+
+
+
+
+
