--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,10 +19,11 @@
   <!--     <div class="course-card-row"> -->
        <% @courses.each do  |course| %>
         <div class="card-course">
+
           <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/c_scale,q_100,w_300/v1603823158/dane-wetton-t1NEMSm1rgI-unsplash_vyigoa.jpg" alt="course-image">
             <div class="card-course-infos">
               <h2><%= course.name %></h2>
-              <%= link_to 'details', course_path(course), class: "btn btn-outline-info mt-2" %>
+              <%= link_to 'details', course_path(course), class: "btn btn-outline-success" %>
             </div>
         </div>
        <% end %>
@@ -30,10 +31,14 @@
     </div>
 
     <div id="map"
-         style="width: 100%; margin-left: 20px; height: 100vh; top: 0; position: sticky; object-fit: cover;"
+         style="width: 50%; margin-left: 20px; height: 100vh; top: 0; position: sticky; object-fit: cover;"
          data-markers='<%= @markers.to_json %>'
          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
   </div>
 </div>
+
+
+
+
 
