--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="info-card">
         <div class='image'>
-          <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603828560/Screenshot_2020-10-27_at_20.55.41_j80wgs.png", class: "avatar-bordered", alt: "avatar-bordered" %>
+          <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603828560/Screenshot_2020-10-27_at_20.55.41_j80wgs.png", class: "avatar-large", alt: "avatar-large" %>
         </div>
         <div class='info'>
           <p>Basic info:</p>
@@ -45,6 +45,8 @@
       </div>
     </div>
   </div>
+
+<!-- CLIENT'S DASHBOARD  -->
 <% else %>
 
   <div id="dashboard">
@@ -52,7 +54,7 @@
     <div class="container">
       <div class="info-card">
         <div class='image'>
-          <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603828560/Screenshot_2020-10-27_at_20.55.41_j80wgs.png", class: "avatar-bordered", alt: "avatar-bordered" %>
+          <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603970239/Screenshot_2020-10-27_at_20.18.05_ddy7yv.png", class: "avatar-large", alt: "avatar-large" %>
         </div>
         <div class='info'>
           <p>Basic info:</p>
@@ -64,9 +66,10 @@
       <div class="courses-card">
       <h2>Your Upcoming Classes:</h2>
         <% current_user.bookings.each do |booking| %>
-          <%= booking.course.name %>
-          <%= booking.occurence.date %>
+          <p><strong><%= booking.course.name %></strong> (<%= booking.occurence.date %>)
+            <%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure you would like to delete?" } do %> <i class="far fa-trash-alt"></i> <% end %></p>
           <% end %>
+      <h2><%= link_to 'Book More Classes', root_path, class: 'btn btn-outline-success' %></legend>
     </div>
   </div>
 <% end %>
