--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -33,3 +33,22 @@
   }
 }
 
+.avatar-bordered {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+  background-clip: content-box;
+  padding: 2px;
+  margin-left: 15px;
+    &:hover {
+      opacity: 0.7;
+      cursor: pointer;
+    }
+  }
+
+.avatar {
+  margin-left: 15px;
+}
+
