--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,40 +5,40 @@
   grid-template-columns: 1fr;
   grid-gap: 10px;
 
-.card-course {
-  overflow: hidden;
-  height: 120px;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-  width: 400px;
-  margin-top: 15px;
-  margin-left: 10px;
-}
+  .card-course {
+    overflow: hidden;
+    height: 120px;
+    background: white;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    width: 400px;
+    margin-top: 15px;
+    margin-left: 10px;
+  }
 
-.card-course img {
-  height: 100%;
-  width: 120px;
-  object-fit: cover;
-}
+  .card-course img {
+    height: 100%;
+    width: 120px;
+    object-fit: cover;
+  }
 
-.card-course h2 {
-  font-size: 25px;
-  margin: 0;
-}
+  .card-course h2 {
+    font-size: 25px;
+    margin: 0;
+  }
 
-.card-course p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
-}
+  .card-course p {
+    font-size: 12px;
+    line-height: 1.4;
+    opacity: .7;
+    margin-bottom: 0;
+    margin-top: 8px;
+  }
 
-.card-course .card-course-infos {
-  padding: 16px;
-}
+  .card-course .card-course-infos {
+    padding: 16px;
+  }
 
 // .course-card-row {
 //   display: flex;
@@ -46,8 +46,6 @@
 // }
 
 }
-
-
 
 .card-category {
   background-size: cover;
@@ -63,3 +61,67 @@
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
+
+.card-category-teacher {
+  height: 300px;
+  justify-content: space-between;
+  border-radius: 0;
+}
+
+.card-relative {
+  position: relative;
+  background-color: rgba(34, 112, 103,0.7);
+  margin-left: 100px;
+  margin-top: 200px;
+  max-height: 500px;
+  max-width: 400px;
+  text-align: center;
+  justify-content: center;
+  display: block;
+  color: white;
+  border-radius: 5px;
+  padding: 20px 60px;
+
+  h2 {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    font-weight: bolder;
+  }
+  li {
+    text-align: left;
+    font-weight: lighter;
+    font-size: 20px;
+  }
+}
+
+.card-info {
+  background-color: rgba(0, 0, 0,0.2);
+  color: rgb(60, 60, 60);
+  padding: 20px;
+  border-radius: 5px;
+  margin-left: 550px;
+  margin-top: 20px;
+  max-height: 400px;
+  justify-content: center;
+  height: 150px;
+  max-width: 800px;
+  width: 800px;
+  p {
+    font-size: 18px;
+  }
+  h5 {
+    font-size: 18px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
