--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -50,17 +50,16 @@
 <% else %>
 
   <div id="dashboard">
-    <span class='welcome'> Welcome </span> <%= current_user.name.capitalize %>,
-    <div class="container">
-      <div class="info-card">
-        <div class='image'>
-          <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603970239/Screenshot_2020-10-27_at_20.18.05_ddy7yv.png", class: "avatar-large", alt: "avatar-large" %>
-        </div>
-        <div class='info'>
-          <p>Basic info:</p>
-          <p>Email: <%= current_user.email%> </p>
-          <p>Address: <%= current_user.address %></p>
-          <p>Phone: <%= current_user.telephone%> </p>
+    <div class ="container">
+      <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <span class='welcome'> Welcome </span> <%= current_user.name.capitalize %>,
+          <%= image_tag "https://res.cloudinary.com/dolfny7hf/image/upload/v1603970239/Screenshot_2020-10-27_at_20.18.05_ddy7yv.png", class: "avatar-large center", alt: "avatar-large" %>
+        <p class="card-text">
+        <p>Basic info:</p>
+        <p>Email: <%= current_user.email%> </p>
+        <p>Address: <%= current_user.address %></p>
+        <p>Phone: <%= current_user.telephone%> </p>
         </div>
       </div>
       <div class="courses-card">
@@ -69,7 +68,11 @@
           <p><strong><%= booking.course.name %></strong> (<%= booking.occurence.date %>)
             <%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure you would like to delete?" } do %> <i class="far fa-trash-alt"></i> <% end %></p>
           <% end %>
-      <h2><%= link_to 'Book More Classes', root_path, class: 'btn btn-outline-success' %></legend>
-    </div>
+        <h2><%= link_to 'Book More Classes', root_path, class: 'btn btn-outline-success' %></legend>
+      </div>
+      <div class="calendar">
+        <h2>WEEK Calendar</h2>
+        <p><img src='https://citynews-today.stgy.ovh/~media/horizontal-hi/61364967865900/calendario-scolastico-2018-2019-2.jpg' width=300></p>
+      </div>
   </div>
 <% end %>
