simple calendar added to teacher webpage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
 @import "font-awesome";
 @import "flatpickr/dist/flatpickr";
 @import "flatpickr/dist/themes/dark";
-// @import "simple_calendar";
+@import "simple_calendar";
 
 
 // Your CSS partials
