--- a/app/views/pages/_info_window.html.erb
+++ b/app/views/pages/_info_window.html.erb
@@ -1,4 +1,7 @@
-<div class="mapboxgl-popup">
+<div id="mapboxgl-popup d-flex">
+  <div class="popup-img">
+    <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/c_scale,q_100,w_220/v1603823158/dane-wetton-t1NEMSm1rgI-unsplash_vyigoa.jpg" alt="course-image">
+  </div>
   <div class="mapboxgl-popup-content">
       <h2><%= course.name %></h2>
       <p><%= course.location %></p>
