--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,10 +31,10 @@
   }
 
   .search-bar {
-    border-radius: 12px;
-    height: 60px;
+    border-radius: 5px;
+    height: 50px;
     padding-left: 10px;
-    width: 600px;
+    width: 60%;
     border-color: white;
     opacity: 76%;
   }
