styled courses show

--- a/app/views/courses/_cardshow.html.erb
+++ b/app/views/courses/_cardshow.html.erb
@@ -1,4 +1,4 @@
-<div class="card-category">
+<div class="card-show">
 <span><%= locals[:occurence].course.name %></span>
 
 <span><%= locals[:occurence].date %></span>
