--- a/app/assets/stylesheets/pages/_courses.scss
+++ b/app/assets/stylesheets/pages/_courses.scss
@@ -1,3 +1,28 @@
-.container-class {
+.container-course-info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 
+.course-img img {
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  margin: 40px;
+}
+
+.course-info {
+  text-align: left;
+  margin: 40px;
+  height: 80%;
+}
+
+.occurence {
+  margin: 20px;
+}
+
+.link-courses{
+  margin-top: 20px;
+  text-align: center;
 }
